objects/sfal__SuccessPlan__c.object
<CustomObject>
    <description>An action plan that guides advisees to achieve a goal or milestone.</description>
    <fields>
        <fullName>sfal__AdviseeRecord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the advisee record Case associated with the Advisee Contact. Value must match the selected Advisee Contact.</description>
        <label>Advisee Record</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Contact associated with the advisee record Case doesn&apos;t match the selected advisee Contact.</errorMessage>
            <filterItems>
                <field>$Source.sfal__Advisee__c</field>
                <operation>equals</operation>
                <valueField>Case.ContactId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Success Plans</relationshipLabel>
        <relationshipName>Success_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Advisee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the advisee Contact that the Success Plan is related to.</description>
        <label>Advisee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Success Plans</relationshipLabel>
        <relationshipName>Success_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__Comments__c</fullName>
        <description>Comments about the Success Plan.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfal__FromTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Success Plan Template used to create this Success Plan.</description>
        <inlineHelpText>The Success Plan Template used to create this Success Plan.</inlineHelpText>
        <label>From Template</label>
        <referenceTo>sfal__SuccessPlanTemplate__c</referenceTo>
        <relationshipLabel>Success Plans</relationshipLabel>
        <relationshipName>Success_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Success Plan is no longer in effect.</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__IsCaseAdviseeRecord__c</fullName>
        <formula>sfal__AdviseeRecord__r.sfal__IsAdviseeRecord__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Case Advisee Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the advisee sees the Success Plan when viewing their Success Plans within the community.</description>
        <inlineHelpText>Indicates whether this Success Plan is included in the list of Success Plans shown to the advisee in the community.</inlineHelpText>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__NumberOfOpenTasks__c</fullName>
        <description>Number of open Tasks related to the Success Plan.</description>
        <inlineHelpText>Number of incomplete Tasks related to this Success Plan.</inlineHelpText>
        <label>Open Tasks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__NumberOfOverdueTasks__c</fullName>
        <description>Number of overdue Tasks related to the Success Plan.</description>
        <inlineHelpText>Number of overdue incomplete Tasks related to this Success Plan.</inlineHelpText>
        <label>Overdue Tasks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__NumberOfTasks__c</fullName>
        <description>Number of total Tasks related to the Success Plan.</description>
        <inlineHelpText>Total number of Tasks related to this Success Plan, both complete and incomplete.</inlineHelpText>
        <label>Tasks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__Status__c</fullName>
        <description>Status of the Success Plan.</description>
        <inlineHelpText>If any related Tasks are incomplete, the Success Plan&apos;s Status remains open. Otherwise, the Success Plan can be closed out as completed or cancelled.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Success Plan</label>
    <listViews>
        <fullName>sfal__All</fullName>
        <columns>NAME</columns>
        <columns>sfal__Advisee__c</columns>
        <columns>sfal__Status__c</columns>
        <columns>sfal__IsPublished__c</columns>
        <columns>sfal__NumberOfOverdueTasks__c</columns>
        <columns>sfal__NumberOfOpenTasks__c</columns>
        <columns>sfal__NumberOfTasks__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plans</pluralLabel>
    <recordTypes>
        <fullName>Academic</fullName>
        <active>true</active>
        <label>Academic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Career</fullName>
        <active>true</active>
        <label>Career</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Aid</fullName>
        <active>true</active>
        <label>Financial Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health</fullName>
        <active>true</active>
        <label>Health</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing</fullName>
        <active>true</active>
        <label>Housing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Students_Plan</fullName>
        <active>true</active>
        <description>Used when the student creates their own plan.</description>
        <label>Students Plan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>sfal__SAL_Trigger_Sharing__c</fullName>
        <label>SAL Trigger Sharing</label>
    </sharingReasons>
</CustomObject>